plugins {
    id 'java'
}

group 'br.com.guilhermealvessilve'
version '1.0-SNAPSHOT'

sourceCompatibility = 14

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs '--enable-preview'
}
